--- a/index.html
+++ b/index.html
@@ -11,6 +11,60 @@
     <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
+    <header class="header">
+        <div class="barra contenedor">
+            <div class="barra__logo">
+                <p class="barra__nombre">Viaje</p>
+            </div>
+
+            <nav class="barra__navegacion">
+                <a class="barra__link" href="#">Lugares para Hospedarte</a>
+                <a class="barra__link" href="#">Experiencias</a>
+                <a class="barra__link" href="#">Experiencias en linea </a>
+            </nav>
+
+            <nav class="barra__login">
+                <a class="barra__link" href="#">Hazte Anfitrion</a>
+            </nav>
+        </div>
+
+
+        <form class="formulario contenedor">
+            <div class="formulario__campo">
+                <label for="Ubicacion" class="formulario__label">Ubicacion</label>
+                <input type="text" class="formulario__input" id="ubicacion " placeholder="¿A donde viajas?">
+            </div>
+
+
+            <div class="formulario__campo">
+                <label for="Llegada" class="formulario__label">Llegada</label>
+                <input type="date" class="formulario__input" id="Llegada">
+            </div>
+
+
+            <div class="formulario__campo">
+                <label for="Salida" class="formulario__label">Salida</label>
+                <input type="date" class="formulario__input" id="Salida" >
+            </div>
+
+
+            <div class="formulario__campo">
+                <label for="Huespedes" class="formulario__label">Huespedes</label>
+                <input type="number" class="formulario__input" id="Huespedes" placeholder="¿Cuantos?">          
+            </div>
+
+
+            <div class="formulario__campo">
+                <input type="submit" class="formulario__submit" value="Buscar">          
+            </div>
+        </form>
+
+        <div class="header__busqueda contenedor">
+            <p class="header__busqueda-label">¿No sabes a donde ir?</p>
+            <a href="#" class="header__busqueda-boton">Busqueda flexible</a>
+        </div>
+
+    </header>
 
 </body>
 </html>
