--- a/index.html
+++ b/index.html
@@ -66,5 +66,142 @@
 
     </header>
 
+
+    <section class="destinos contenedor seccion">
+        <h2 class="destinos__heading">Descubre alojamientos populares</h2>
+
+        <ul class="destinos__grid">
+            <li class="destino">
+                <div class="destino__imagen">
+                    <img src="./build/img/icono_destino_1.png" alt="destino 1">
+                </div>
+
+                <div class="destino__informacion">
+                    <h3 class="destino__nombre">New York</h3>
+                    <p class="destino__distancia">4 horas en avion</p>
+                </div>
+            </li>
+
+
+            <li class="destino">
+                <div class="destino__imagen">
+                    <img src="./build/img/icono_destino_2.png" alt="destino 2">
+                </div>
+
+                <div class="destino__informacion">
+                    <h3 class="destino__nombre">Paris</h3>
+                    <p class="destino__distancia">4 horas en avion</p>
+                </div>
+            </li>
+
+
+            <li class="destino">
+                <div class="destino__imagen">
+                    <img src="./build/img/icono_destino_3.png" alt="destino 3">
+                </div>
+
+                <div class="destino__informacion">
+                    <h3 class="destino__nombre">San Francisco</h3>
+                    <p class="destino__distancia">4 horas en avion</p>
+                </div>
+            </li>
+
+
+            <li class="destino">
+                <div class="destino__imagen">
+                    <img src="./build/img/icono_destino_4.png" alt="destino 4">
+                </div>
+
+                <div class="destino__informacion">
+                    <h3 class="destino__nombre">Egipto</h3>
+                    <p class="destino__distancia">4 horas en avion</p>
+                </div>
+            </li>
+
+
+            <li class="destino">
+                <div class="destino__imagen">
+                    <img src="./build/img/icono_destino_5.png" alt="destino 5">
+                </div>
+
+                <div class="destino__informacion">
+                    <h3 class="destino__nombre">Londres</h3>
+                    <p class="destino__distancia">4 horas en avion</p>
+                </div>
+            </li>
+
+
+            <li class="destino">
+                <div class="destino__imagen">
+                    <img src="./build/img/icono_destino_6.png" alt="destino 6">
+                </div>
+
+                <div class="destino__informacion">
+                    <h3 class="destino__nombre">Italia</h3>
+                    <p class="destino__distancia">4 horas en avion</p>
+                </div>
+            </li>
+
+
+            <li class="destino">
+                <div class="destino__imagen">
+                    <img src="./build/img/icono_destino_7.png" alt="destino 7">
+                </div>
+
+                <div class="destino__informacion">
+                    <h3 class="destino__nombre">India</h3>
+                    <p class="destino__distancia">4 horas en avion</p>
+                </div>
+            </li>
+
+
+            <li class="destino">
+                <div class="destino__imagen">
+                    <img src="./build/img/icono_destino_8.png" alt="destino 8">
+                </div>
+
+                <div class="destino__informacion">
+                    <h3 class="destino__nombre">Grecia</h3>
+                    <p class="destino__distancia">4 horas en avion</p>
+                </div>
+            </li>
+        </ul>
+    </section>
+
+
+    <section class="lugares contenedor seccion">
+        <h2 class="lugares__heading">Vive en cualquier lugar del mundo</h2>
+
+        <div class="lugares__grid">
+
+            <div class="lugar">
+                <img src="./build/img/vive_1.jpg" class="lugar__imagen" alt="imagen seccion vive">
+
+                <p class="lugar__nombre">Escapadas al aire libre</p>
+            </div>
+
+
+            <div class="lugar">
+                <img src="./build/img/vive_2.jpg" class="lugar__imagen" alt="imagen seccion vive">
+
+                <p class="lugar__nombre">Alojamientos unicos </p>
+            </div>
+
+
+            <div class="lugar">
+                <img src="./build/img/vive_3.jpg" class="lugar__imagen" alt="imagen seccion vive">
+
+                <p class="lugar__nombre">Alojamientos enteros </p>
+            </div>
+
+
+            <div class="lugar">
+                <img src="./build/img/vive_4.jpg" class="lugar__imagen" alt="imagen seccion vive">
+
+                <p class="lugar__nombre">Con tu mascota</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
